feat : 음료는 제로콜라, 레드와인, 샴페인으로 구성